# pranavpy

./: README.md  makefile  pyproject.toml
.github/workflows/: publish.yml
src/pranavpy/: cli.py
tests/: test_cli.py
